[tool.poetry]
name = "dufflepud"
version = "0.1.0"
description = "A media server for the coracle nostr client"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
raddoo = "^0.0.18"
flask = {extras = ["async"], version = "^3.0.3"}
gunicorn = "^20.1.0"
flask-cors = "^3.0.10"
toml = "^0.10.2"
requests = "^2.28.2"
redis = "^5.0.8"
aiohttp = "^3.10.5"
gevent = "^24.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
